Fixed some overlap

--- a/src/components/auth/Register.css
+++ b/src/components/auth/Register.css
@@ -1,4 +1,5 @@
 main {
+    margin-top: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,6 +61,7 @@ main {
   
   .link--register {
     margin-top: 20px;
+    padding-bottom: 20px;
   }
   
   .link--register a {
