--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: flex-end;
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10;
   }
   
   .nav-item {
